--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </button>
     </div>
     <div class="main-container-right">
-      <img src="img/Audi_Rs5_Sportback_2019.jpg" alt="Ремонт стартеров и генераторов">
+      <!--<img src="img/Audi_Rs5_Sportback_2019.jpg" alt="Ремонт стартеров и генераторов">-->
     </div>
   </div>
 </section>
